--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/dev/jitsi-meet/
+    destination: /home/dev/test-jitsi-vidi
 hooks:
   BeforeInstall:
     - location: scripts/install_dependencies.sh
